2004-12-31  Steffen Macke <sdteffen@gmail.com>

	* doc/pl/*.xml: Added XML prolog
	* makefile.msc: Added libxslt, fixed libxml, libart

2004-10-29  Alexander Shopov  <ash@contact.bg>

	* configure.in (ALL_LINGUAS): Added "bg" (Bulgarian)

2004-12-29  Lars Clausen  <lars@raeder.dk>

	* configure.in: Make gnomeprint be truly off by default (typo) and
	show optional compilation correctly.
	* plug-ins/gprint/Makefile.am: Exclude gnomeprint if not optioned in.

2004-12-22  Hans Breuer  <hans@breuer.org>

	* lib/widgets.c : destroy handlers can be called more than once, 
	see http://developer.gnome.org/doc/API/2.0/gtk/gtk-changes-2-0.html

	* app/app_procs.c : #ifdef GLIB(2.6.0) but GTK(2.4.x)
	
	* app/display.c : temporary debug code showing the
	timing the rendering

	* app/dialibartrenderer.c(draw_string) : removed dead
	code loading and leaking font and face

2004-12-15  Hans Breuer  <hans@breuer.org>

	* app/display.c : actually use the selction-changed signal for something
	useful. Show selections representation on statusbar.
	* lib/object.h lib/prop_text.c lib/libdia.def : provide objet_get_displayname() 
	* app/diagram_tree.c : use new function (as in app/display.c) and only
	poke into property internals at one place
	* app/diagram.c : use g_signal_handlers_block_by_func to avoid has-no-handler-
	complains

2004-12-12  Hans Breuer  <hans@breuer.org>

	* lib/libdia.def app/dia.def : updated externals

	* objects/custom/custom_object.c : custom_destroy is called per object. 
	It _must not_ destroy class stuff (ShapeInfo) cause it does not hold a 
	reference to it. Fixes e.g. bug #158288, #160550, ...

	* objects/UML/association.c(association_draw) : completed porting to
	draw_polyline_with_arrows()
	(association_update_data_end) : fixed typo in point compare
	(association_update_data) : for name placement take degenerated 
	segements into account. Together this fixes bug #143891

2004-12-11  Hans Breuer  <hans@breuer.org>
