@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?> <!-- -*- xml -*- -->
 <sheet xmlns="http://www.lysator.liu.se/~alla/dia/dia-sheet-ns">
   <_name>RE-Jackson</_name>
-  <_description>Objects to design Jacskon diagrams</_description>
+  <_description>Objects to design Jackson diagrams</_description>
   <contents>
     <object name="Jackson - domain" intdata="1">
       <_description>A Jackson given domain</_description>
